--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-# ---------------------------------------------------------------
+﻿# ---------------------------------------------------------------
 # Jekyll & Global Configuration
 ## Docs: https://jekyllrb.com/docs/configuration/
 # ---------------------------------------------------------------
 
 # Site
-title: NexT
+title: dinycat
 subtitle:
 description:
 author: John Doe
