--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,4 @@
-﻿# ---------------------------------------------------------------
-# Jekyll & Global Configuration
-## Docs: https://jekyllrb.com/docs/configuration/
-# ---------------------------------------------------------------
-
-# Site
+﻿# Site
 title: dinycat
 subtitle:
 description:
