--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 ﻿# Site
-title: dinycat
+title: kim-dinycub
 subtitle:
 description:
-author: John Doe
+author: dinycub
 # Support language: de, en, fr-FR, id, ja, ko, pt-BR, pt, ru, zh-Hans, zh-hk, zh-tw
 language: zh-Hans
 date_format: '%Y-%m-%d'
